Revert "Merge branch 'main' of https://github.com/NigthZoneHNE/Private_Chat_Template"
This reverts commit c1c4cee485ff544d225a733b1d532258a9bdfe71, reversing
changes made to 543c28c559da23f486a4626f323fc65c6da9dd08.

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -11,11 +11,11 @@
 
 
 
-        <div class="div-one"></div>
-        <div class="div-two"></div>
+        <div class="div-1"></div>
+        <div class="div-2"></div>
         <div class="message-box-container"></div>
-        <div class="div-four"></div>
-        <div class="div-five"></div>
+        <div class="div-4"></div>
+        <div class="div-5"></div>
 
 
 
